# Entrega3

./: README.md  pyproject.toml
Cuaderno/: Grupo_4_Agrupación_de_datos_sobre_obesidad.ipynb
