[tool.poetry]
name = "entrega 3"
version = "0.1.0"
description = "Desarrollo actividad 3 agrupacion de datos sobre obesidad"
authors = ["SSimmondsR <santiagossimmonds@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
seaborn = "^0.13.2"
ucimlrepo = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
